[project]
name = "wil_proj_backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "beanie>=2.0.0",
    "fastapi[standard]>=0.116.1",
    "pydantic-settings>=2.10.1",
    "pymongo>=4.13.2",
    "ruff>=0.12.7",
    "scalar-fastapi>=1.2.3",
]
